fix(ux): navbar flicker and false theme updates

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,6 @@ a {
 .nav-link:hover {
     background-color: var(--border-color);
     color: var(--highlight-color);
-    transform: translate(2px, 2px);
     box-shadow: -2px -2px 0 var(--accent-color);
 }
 
